Oprava view (kurzy měn)

--- a/AzureWorkshop/Views/Home/Index.cshtml
+++ b/AzureWorkshop/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                 <td>@exchange.Currency</td>
                 <td>@exchange.Amount.ToString("N2")</td>
                 <td>@exchange.Code</td>
-                <td>@exchange.Amount.ToString("N2")</td>
+                <td>@exchange.ExchangeRate.ToString("N2")</td>
             </tr>
         }
         </tbody>
